<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="@drawable/background_bitmap"
    android:columnCount="6"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="8"
    tools:context="chartbuilderfx.oleksandr.iakushev.com.calculatorfx.MainActivity">

    <EditText
        android:id="@+id/editFunc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="6"
        android:layout_row="0"
        android:background="@drawable/editfunc_shape"
        android:ems="10"
        android:hint="@string/enter_function"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="16sp"
        android:paddingBottom="3dp" />

    <Button
        android:id="@+id/buttond1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/digit1" />

    <Button
        android:id="@+id/buttond2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/digit2" />

    <Button
        android:id="@+id/buttond3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="1"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/digit3" />

    <Button
        android:id="@+id/buttonopower"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="1"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/op_power" />

    <Button
        android:id="@+id/buttondel"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="4"
        android:layout_row="1"
        android:background="@drawable/red_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/del_char" />

    <Button
        android:id="@+id/buttonclr"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="5"
        android:layout_row="1"
        android:background="@drawable/red_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/clear_all" />

    <Button
        android:id="@+id/buttond4"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/digit4" />

    <Button
        android:id="@+id/buttond5"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/digit5" />

    <Button
        android:id="@+id/buttond6"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="2"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/digit6" />

    <Button
        android:id="@+id/buttonomulty"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="2"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/op_multy" />

    <Button
        android:id="@+id/buttonvx"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="4"
        android:layout_row="2"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/var_x" />

    <Button
        android:id="@+id/buttonbreakbeg"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="5"
        android:layout_row="2"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/breakbeg" />

    <Button
        android:id="@+id/buttond7"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/digit7" />

    <Button
        android:id="@+id/buttond8"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/digit8" />

    <Button
        android:id="@+id/buttond9"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="3"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/digit9" />

    <Button
        android:id="@+id/buttonodiv"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="3"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/op_div" />

    <Button
        android:id="@+id/buttonvpi"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="4"
        android:layout_row="3"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/var_pi" />

    <Button
        android:id="@+id/buttonbreakend"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="5"
        android:layout_row="3"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/breakend" />

    <Button
        android:id="@+id/buttond0"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="4"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/digit0" />

    <Button
        android:id="@+id/buttondpoint"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="4"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/dpoint" />

    <Button
        android:id="@+id/buttonominus"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="4"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/op_minus" />

    <Button
        android:id="@+id/buttonoplus"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="4"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/op_plus" />

    <Button
        android:id="@+id/buttonfln"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="4"
        android:layout_row="4"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/func_ln" />

    <Button
        android:id="@+id/buttonve"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="5"
        android:layout_row="4"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/var_e" />

    <Button
        android:id="@+id/buttonfasin"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="5"
        android:background="@drawable/blue_button_selector"
        android:text="@string/func_asin"
        android:textColor="@color/white_color" />

    <Button
        android:id="@+id/buttonfsin"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="5"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/func_sin" />

    <Button
        android:id="@+id/buttonftan"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="5"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/func_tan" />

    <Button
        android:id="@+id/buttonfatan"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="5"
        android:background="@drawable/blue_button_selector"
        android:text="@string/func_atan"
        android:textColor="@color/white_color" />

    <Button
        android:id="@+id/buttonendleft"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="4"
        android:layout_row="5"
        android:background="@drawable/blue_button_selector"
        android:text="@string/end_to_left"
        android:textColor="@color/white_color" />

    <Button
        android:id="@+id/buttonendright"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="5"
        android:layout_row="5"
        android:background="@drawable/blue_button_selector"
        android:text="@string/end_to_right"
        android:textColor="@color/white_color" />

    <Button
        android:id="@+id/buttonfacos"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="6"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/func_acos" />

    <Button
        android:id="@+id/buttonfcos"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="6"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/func_cos" />

    <Button
        android:id="@+id/buttonfexp"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="6"
        android:background="@drawable/blue_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/func_exp" />

    <Button
        android:id="@+id/buttonfsqrt"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_gravity="top"
        android:layout_row="6"
        android:background="@drawable/blue_button_selector"
        android:text="@string/func_sqrt"
        android:textColor="@color/white_color" />

    <Button
        android:id="@+id/buttonleft"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="4"
        android:layout_row="6"
        android:background="@drawable/blue_button_selector"
        android:text="@string/to_left"
        android:textColor="@color/white_color" />

    <Button
        android:id="@+id/buttonright"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="5"
        android:layout_row="6"
        android:background="@drawable/blue_button_selector"
        android:text="@string/to_right"
        android:textColor="@color/white_color" />


    <Button
        android:id="@+id/buttonBuildChart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="6"
        android:layout_row="7"
        android:background="@drawable/green_button_selector"
        android:text="@string/build_chart"
        android:textColor="@color/white_color" />
</GridLayout>
