<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="chartbuilderfx.oleksandr.iakushev.com.calculatorfx.ResultActivity">


    <Button
        android:id="@+id/buttonback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/green_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/back" />

    <Button
        android:id="@+id/buttonrefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonback"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/green_button_selector"
        android:textColor="@color/white_color"
        android:text="@string/refresh" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonrefresh"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="82dp"
        android:layout_marginRight="5dp"
        android:text="@string/begin_point"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonrefresh"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="31dp"
        android:layout_marginRight="5dp"
        android:text="@string/end_point"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextXEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/textView1"
        android:background="@drawable/editx_shape"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="15sp" />

    <chartbuilderfx.oleksandr.iakushev.com.calculatorfx.ChartCanvas
        android:id="@+id/chartcanvas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextXBeg"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="2dp"
        android:ems="10" />

    <EditText
        android:id="@+id/editTextXBeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/editTextXEnd"
        android:layout_alignRight="@+id/editTextXEnd"
        android:background="@drawable/editx_shape"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="15sp" >

        <requestFocus />
    </EditText>


</RelativeLayout>
